[gd_scene load_steps=2 format=3 uid="uid://d4dd1a5m6rqvv"]

[ext_resource type="Script" path="res://main.gd" id="1_nbra5"]

[node name="Node" type="Node"]
script = ExtResource("1_nbra5")

[node name="Panel" type="Panel" parent="."]

[node name="Label" type="TestD" parent="Panel"]
<<<<<<< HEAD
number = 2
||||||| 3a73fd4
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
number = 24
long_node_path = NodePath("One/Looooong/Incredibly/Unbroken/Node/Path/Label")
=======
number = 24
long_node_path = NodePath("One/Looooong/Incredibly/Unbroken/Node/Path/Label")
>>>>>>> b2fec35c077b09ef053c45c235e04f3b64e96ecf
layout_mode = 1
offset_right = 211.0
offset_bottom = 26.0
size_flags_vertical = 0
text = "Old text set in Godot editor"

[node name="ColorRect" type="ColorRect" parent="Panel/Label"]
<<<<<<< HEAD
layout_mode = 0
||||||| 3a73fd4
anchors_preset = 11
=======
layout_mode = 1
anchors_preset = 11
>>>>>>> b2fec35c077b09ef053c45c235e04f3b64e96ecf
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="One" type="Panel" parent="Panel/Label"]
layout_mode = 0

[node name="Looooong" type="Panel" parent="Panel/Label/One"]
layout_mode = 0

[node name="Incredibly" type="Panel" parent="Panel/Label/One/Looooong"]
layout_mode = 0

[node name="Unbroken" type="Panel" parent="Panel/Label/One/Looooong/Incredibly"]
layout_mode = 0

[node name="Node" type="Panel" parent="Panel/Label/One/Looooong/Incredibly/Unbroken"]
layout_mode = 0

[node name="Path" type="Panel" parent="Panel/Label/One/Looooong/Incredibly/Unbroken/Node"]
layout_mode = 0

[node name="Label" type="Label" parent="Panel/Label/One/Looooong/Incredibly/Unbroken/Node/Path"]
layout_mode = 1
offset_top = 50.0
offset_right = 1.0
offset_bottom = 73.0

[node name="Label2" type="Label" parent="Panel/Label/One/Looooong/Incredibly/Unbroken/Node/Path"]
layout_mode = 1
offset_top = 100.0
offset_right = 1.0
offset_bottom = 123.0
text = "label2"

[connection signal="send_message" from="Panel/Label" to="." method="_on_label_send_message"]
